--- a/packages/docs-worklets/src/pages/styles.module.css
+++ b/packages/docs-worklets/src/pages/styles.module.css
@@ -16,6 +16,6 @@
 
     @media (max-width: 936px) {
         margin-top: 100px;
-        gap: 60px;
+        gap: 56px;
     }
 }
